--- a/01_sesiones/econometria2_v301.html
+++ b/01_sesiones/econometria2_v301.html
@@ -499,6 +499,12 @@ usual de los intervalos de confianza.</p>
 </div>
 <div id="s3-introducción-a-r" class="section level1">
 <h1>S3: Introducción a R</h1>
+<div id="datos-de-la-sesión-2" class="section level2">
+<h2>3.1. Datos de la sesión</h2>
+<p><strong>Fecha de la sesión:</strong> 2022-09-05</p>
+</div>
+<div id="script" class="section level2">
+<h2>3.2. Script</h2>
 <p><label for="tufte-mn-8" class="margin-toggle">⊕</label><input type="checkbox" id="tufte-mn-8" class="margin-toggle"><span class="marginnote"><span style="display: block;"><strong>Tomado
 de:</strong> Healy, K. (2008). Data Visualization. A practical
 introduction (<a href="https://socviz.co" class="uri">https://socviz.co</a>).</span></span></p>
@@ -554,6 +560,7 @@ gapminder
 p &lt;- ggplot(data = gapminder,
        mapping  = aes(x = gdpPercap, y = lifeExp))
 p + geom_point()</code></pre>
+</div>
 </div>
 
 
